mdapi_output_dir/objects/Car__c.object
<CustomObject>
    <label>Car</label>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Car_Cost__c</fullName>
        <label>Car Cost (in USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Cost_converted_KGS__c</fullName>
        <label>Car Cost (converted - KGS)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comission__c</fullName>
        <label>Comission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dismantle__c</fullName>
        <label>Dismantle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <label>Driver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cars</relationshipLabel>
        <relationshipName>Cars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Dismantled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dismantled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Drivable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Drivable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Picked_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Picked Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cars (Master)</relationshipLabel>
        <relationshipName>Cars1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Penalty_Cost__c</fullName>
        <label>Penalty Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auction</fullName>
                </value>
                <value>
                    <fullName>On The Road</fullName>
                </value>
                <value>
                    <fullName>In The Yard</fullName>
                </value>
                <value>
                    <fullName>Dismantling</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Hold on</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Cost__c</fullName>
        <label>Storage Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transportation__c</fullName>
        <label>Transportation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vin_Code__c</fullName>
        <label>Vin Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>